fixed JDK 12+ compatibility